--- a/build.gradle
+++ b/build.gradle
@@ -24,16 +24,15 @@ repositories {
 }
 
 dependencies {
-	// WebClient
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	implementation 'org.json:json:20230227'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'// Servlet API 추가
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용
+	implementation 'org.springframework.boot:spring-boot-starter-security' // 보안 구성
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
+	implementation 'org.json:json:20230227' // JSON 파싱
+	runtimeOnly 'com.mysql:mysql-connector-j' // MySQL 커넥터
+	compileOnly 'org.projectlombok:lombok' // 롬복
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
